MODBULKOPS-451 - Rework errors preview